terraform/pipeline-rds.tf
# Create a DB Subnet Group
resource "aws_db_subnet_group" "pipeline-rds-subnet-group" {
  name       = "c22-planning-pipeline-db-subnet-group"
  
  subnet_ids = data.aws_subnets.public_subnets.ids

  tags = {
    Name = "c22-planning-pipeline-db-subnet-group"
  }
}

# Create a New Security Group for the RDS instance
resource "aws_security_group" "pipeline-rds-sg-v2" {
  name        = "c22-planning-pipeline-rds-sg-v2"
  description = "Allow inbound PostgreSQL traffic from the public internet"
  vpc_id      = data.aws_vpc.c22_vpc.id

  # Inbound Rules (Ingress)
  ingress {
    description      = "PostgreSQL from anywhere"
    from_port        = 5432
    to_port          = 5432
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"] # The "Anywhere" setting
  }

  # Outbound Rules (Egress)
  egress {
    description      = "Allow all outbound traffic"
    from_port        = 0
    to_port          = 0
    protocol         = "-1" # -1 means all protocols
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "c22-planning-pipeline-rds-sg-v2"
  }
}

# Create the RDS Instance
resource "aws_db_instance" "pipeline-planning-db" {
  identifier             = "c22-planning-pipeline-db"
  engine                 = "postgres"
  engine_version         = "16"
  instance_class         = "db.t3.micro"
  allocated_storage      = 20
  storage_type           = "gp3"
  db_name                = var.rds_database
  
  # Use credentials from Terraform variable
  username               = var.rds_username
  password               = var.rds_password
  
  db_subnet_group_name   = aws_db_subnet_group.pipeline-rds-subnet-group.name
  vpc_security_group_ids = [aws_security_group.pipeline-rds-sg-v2.id]
  
  publicly_accessible    = true
  skip_final_snapshot    = true  
}
